feat: atualizado banco e adicionado endpoint/metodos para buscar indicadores por radar